Menu and banner

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -51,3 +51,9 @@ nav a:hover {
     color: #ffffff;
 }
 
+#banner {
+    background-image: url(../images/img1.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 670px;
+}
