Aside and Contact

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -140,3 +140,71 @@ nav a:hover {
     margin-bottom: 20px;
     border-bottom: 1px solid #ffffff;
 }
+
+#geral {
+    display: flex;
+    justify-content: center;
+}
+
+#geral section {
+    flex: 2;
+}
+
+#geral aside {
+    flex: 1;
+}
+
+.widget_title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.widget_title_text {
+    color: #000000;
+    font-size: 21px;
+    font-weight: bold;
+}
+
+.widget_title_bar {
+    width: 50px;
+    height: 2px;
+    background-color: #36a9e1;
+    margin-top: 10px;
+}
+
+.widget_content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    margin-top: 20px;
+}
+
+.widget1 {
+    background-color: #0079c7;
+    width: 150px;
+    height: 150px;
+}
+
+.widget_body p {
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.contact .phone,
+.contact .formulario {
+    display: flex;
+    font-size: 14px;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+}
+
+.contact .email {
+    margin-top: 10px;
+    font-size: 14px;
+}
