--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -265,3 +265,83 @@ article .news_resume {
     font-size: 14px;
     margin-bottom: 20px;
 }
+
+footer {
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_menu {
+    display: flex;
+}
+
+.fm_1,
+.fm_2,
+.fm_3 {
+    flex: 1;
+    color: #ffffff;
+}
+
+.fm_1 {
+    background-color: #39aae1;
+}
+
+.fm_2 {
+    background-color: #0079c7;
+}
+
+.fm_3 {
+    background-color: #2b4c99;
+}
+
+.footer_menu a {
+    display: block;
+    text-decoration: none;
+    padding: 20px;
+    color: #ffffff;
+}
+
+.footer_menu a h1 {
+    font-size: 30px;
+    font-weight: normal;
+}
+
+.footer_menu a p {
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.footer_area {
+    display: flex;
+}
+
+.footer_areaitem {
+    flex: 1;
+    color: #ffffff;
+}
+.flexColumn {
+    flex-direction: column;
+}
+
+footer .widget_title_text {
+    color: #ffffff;
+}
+
+.footer_copy {
+    border-top: 1px solid #2c2c2c;
+    height: 40px;
+    line-height: 40px;
+    color: #5c5c5c5c;
+    font-size: 12px;
+    margin-top: 30px;
+}
+
+.widget_body .informations {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+
